# audio-transcription-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  env.example  gunicorn.conf.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  wsgi.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  services.py  transcription.py  twilio_gateway.py  webhook.py
tests/: conftest.py  fakes.py  test_config.py  test_health.py  test_twilio_gateway.py  test_webhook.py
