[project]
name = "audio-transcription-bot"
version = "1.0.0"
description = "A WhatsApp bot that transcribes voice notes with OpenAI Whisper, via Twilio and Flask."
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
dependencies = [
    "Flask==3.1.3",
    "python-dotenv==1.2.2",
    "twilio==9.10.9",
    "openai-whisper==20250625",
    "torch>=2.2.0",
    "requests>=2.32.2",
]

[project.optional-dependencies]
prod = ["gunicorn==26.0.0"]
dev = ["pytest==9.1.1", "ruff==0.15.20"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ARG", "PLC"]
ignore = ["E501"]  # line length is handled by the formatter, not enforced hard

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]  # fixtures and fakes accept unused args by design
